    (applied upstream).

  [ José Manuel Santamaría Lema ]
  * Update symbols files.
  * Bump Standards-Version to 3.9.3, no changes needed.
  * Remove -DBUILD_libkactivities=OFF from the cmake parameters, no longer
    needed.

  [ Pino Toscano ]
  * libsolid4: suggest media-player-info on Linux archs.

  [ Modestas Vainius ]
  * Drop upstream_Add-missing-include.patch, stolen from upstream.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 08 Mar 2012 17:23:21 +0100

kde4libs (4:4.7.4-6) unstable; urgency=low

  * Team upload.

  [ Scott Kitterman ]
  * Confirm symbols files for all archs except amd64 and s390x
  * Add support to cmake/modules/PythonMacros.cmake for the environment
    variable $PYTHONDONTWRITEBYTECODE to work around the lack of support for
    Python 3 byte code compilation (Closes: #672552)
    - Added in debian/patches/python3-support-bytecode.patch
    - Thanks to Colin Watson for the patch

 -- Scott Kitterman <scott@kitterman.com>  Sat, 19 May 2012 15:36:15 -0400

kde4libs (4:4.7.4-5) unstable; urgency=low

  * Team upload.

  [ Pino Toscano ]
  * Make kdelibs5-dbg strictly depend on libkdecore5, to avoid a mismatch
    between the kdelibs debug symbols and at least one of the libraries.
  * Backport the upstream commit 01b0c1a8051f372e400d213ac125311c398e4b17 to fix
    the build with GCC 4.7; patch upstream_Add-missing-include.patch.
  * Bump Standards-Version to 3.9.3, no changes required.

  [ Modestas Vainius ]
  * Add temporary Build-Conflicts against libqtwebkit-dev << 2.2.1.
  * Update symbol files for gcc 4.7.

 -- Modestas Vainius <modax@debian.org>  Sun, 13 May 2012 00:20:58 +0300

kde4libs (4:4.7.4-4) unstable; urgency=low

  * Team upload.
  * Backport the upstream commit d1edc0f038818a073488f6a1822cfb01d43d67e4 to fix
    a crash in KIO in some situations, like with proxies with kmail or akonadi
    (patch upstream_better-check-for-return-values-of-m_protocols.value.patch).
    (Closes: #663528)
